<resources>
    <string name="app_name" translatable="false">رَبِیْعُ الْقُلُوْب</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_prayer_times">Prayer Times</string>
    <string name="title_prayer_settings">Prayer Settings</string>
    <string name="title_juzz_index">Juzz Index</string>
    <string name="title_surah_index">Surah Index</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_go_to_page">Go To Page</string>
    <string name="title_new_bookmark">Add New bookmark</string>
    <string name="start_reading">Start Reading the Quran</string>
    <string name="resume_reading">Resume Reading the Quran</string>
    <string name="page_no">page # %s</string>
    <string name="page_number">Page No: %s</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_page_no">Invalid Page Number</string>
    <string name="add_new_bookmark">Add New Bookmark</string>
    <string name="ok">ok</string>
    <string name="valid_option">Select a valid option</string>
    <string name="settings">Settings</string>
    <string name="al_sudais">Al-sudais</string>
    <string name="taptoplay">Tap to play surah</string>
    <string name="save">save</string>
</resources>