<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@drawable/bg_rounded_corners"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/title_new_bookmark"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E4FAF7F2"
                android:layout_marginHorizontal="@dimen/_20sdp"
                >
                <TextView
                    android:id="@+id/tvEngJuzzName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/poppins"
                    android:text="Page # 547"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tvJuzzName"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/goldFinger"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:id="@+id/tvSurahNames"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/poppins"
                    android:text="Page # 547"
                    android:layout_marginBottom="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tvJuzzName"
                    app:layout_constraintTop_toBottomOf="@id/tvEngJuzzName"
                    android:textColor="#7A7772"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:id="@+id/tvJuzzName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="Page # 547"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/goldFinger"
                    android:textSize="@dimen/_11ssp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/tvPageNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:fontFamily="@font/poppins"
                android:text="Page # 547"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtBookmarkName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:fontFamily="@font/poppins"
                android:hint="Enter page number (2-549)"
                android:inputType="text"
                android:maxLength="20"
                android:textSize="@dimen/_9ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="end"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="end|center_vertical"
                    android:text="@string/cancel"
                    android:textAllCaps="true" />

                <TextView
                    android:id="@+id/tvContinue"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="end"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="end|center_vertical"
                    android:text="@string/save"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rvLanguage" />
            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

</layout>